<resources>
    <string name="app_name">Staff</string>
    <string name="title_activity_workers">Wonka\'s worker browser</string>
    <string name="title_activity_worker_detail">DetailActivity</string>

    <string name="label_filters">Filters</string>

    <string name="label_gender">Gender</string>
    <string name="label_filter_male">Male</string>
    <string name="label_filter_female">Female</string>
    <string name="tag_filter_male">M</string>
    <string name="tag_filter_female">F</string>

    <string name="label_profession">Profession</string>
    <string name="label_filter_developer">Developer</string>
    <string name="label_filter_metal_worker">Metalworker</string>
    <string name="label_filter_gemcutter">Gemcutter</string>
    <string name="label_filter_medic">Medic</string>
    <string name="label_filter_brewer">Brewer</string>
    <string name="tag_filter_developer">Developer</string>
    <string name="tag_filter_metal_worker">Metalworker</string>
    <string name="tag_filter_gemcutter">Gemcutter</string>
    <string name="tag_filter_medic">Medic</string>
    <string name="tag_filter_brewer">Brewer</string>
    <string name="label_about">About</string>
    <string name="label_description">Description</string>
    <string name="label_quota">Quota</string>
    <string name="label_age">Age</string>
    <string name="label_height">Height</string>
    <string name="label_bio">Bio</string>
    <string name="label_country">Country</string>
    <string name="label_email">E-mail</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_color">Color</string>
    <string name="label_food">Food</string>
    <string name="label_random">Random</string>
    <string name="label_song">Song</string>

</resources>
